# nb-rag

./: .envrc  Pipfile  plugin.bash  pyproject.toml
source/: chroma_db.py  cli.py  embedding.py  indexer.py  query.py
