[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nb-rag"
version = "0.1.0"
description = "Notebook-based RAG (Retrieval-Augmented Generation) system"
readme = "README.md"
authors = [
    {name = "Will Han", email = "xingheng.hax@qq.com"}
]
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Indexing",
    "Topic :: Utilities",
]
dependencies = [
    "chromadb>=0.4.22",
    "sentence-transformers>=2.2.2",
    "langchain>=0.1.0",
    "click>=8.1.0",
    "rich>=13.0.0",
]

[project.scripts]
nb-rag = "source.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/nb-rag"
Repository = "https://github.com/yourusername/nb-rag.git"
Issues = "https://github.com/yourusername/nb-rag/issues"
